# invico_streamlit

./: .gitignore  MASTER_PLAN.md  app.py  build.py  compile.py  openapi.json  pyproject.toml  requirements.txt  run.py
.agent/rules/: buenas-practicas-desarrollo.md
.agent/skills/architecture/: api_wrapper.md  automation_safety.md  state_management.md  theming.md  ui_patterns.md
.agent/skills/skill-creator/: SKILL.md
.streamlit/: config.toml
src/: .env.example  automation_runner.py
src/automation/analysis/: control_recursos.py  siif_unified.py  sscc_unified.py
src/automation/siif/: connect_siif.py  gto_rpa03g.py  planillometro_hist.py  rcg01_uejp.py  rci02.py  rcocc31.py  rdeu012.py  rdeu012b2_cuit.py  rf602.py  rf610.py  rff01.py  rfondo07tp.py  rfondos04.py  rfp_p605b.py  ri102.py  rog01.py  rpa03g.py  rvicon03.py
src/automation/sscc/: banco_invico.py  banco_invico_runner.py  connect_sscc.py
src/components/: buttons.py  cards.py  dataframes.py  multiselects.py  text_inputs.py
src/config/: __base_config.py  __init__.py
src/constants/: endpoints.py  options.py
src/migration/: migration_client.py
src/migration/icaro/: icaro.py
src/migration/siif/: rf602.py
src/migration/sscc/: ctas_ctes.py
src/pages/: login.py
src/pages/admin/: gestion_usuarios.py
src/pages/controles/: control_haberes.py  control_honorarios.py  (+3 more)
src/services/: api_client.py  auth_service.py  models.py
src/utils/: __init__.py  exceptions.py  handling_files.py  handling_path.py  print_tables.py  version.py
src/views/: aux_tables.py  modal_siif.py  modals.py
(+28 files in other folders)
