[tool.poetry]
name = "invico-streamlit"
version = "0.12.16"
description = "Dashboard de Control Presupuestario"
authors = ["Fernando Corrales <fscpython@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
streamlit = "*"
pywinauto = "^0.6.9"
playwright = "^1.40.0"
pydantic = "^2.6.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
pydantic-settings = "^2.13.1"
xlrd = "^2.0.2"
pdfplumber = "^0.11.9"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.5"
pyinstaller = "^6.19.0"
typer = "^0.24.1"
rich = "^14.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
